src/responses/tests/snapshots/ciboulette__responses__tests__select_success__simple_read_multi.snap
---
source: src/outbound_request/tests/select_success.rs
expression: response

---
{
  "jsonapi": {
    "version": "1.0"
  },
  "data": [
    {
      "type": "comments",
      "id": "073b5936-0acb-4601-b4b7-9de607dfc2ef",
      "attributes": "<some data>"
    }
  ]
}
