src/responses/tests/snapshots/ciboulette__responses__tests__select_success__with_include_single.snap
---
source: src/responses/tests/select_success.rs
expression: response

---
{
  "jsonapi": {
    "version": "1.0"
  },
  "links": {
    "self": "/peoples/073b5936-0acb-4601-b4b7-9de607dfc2ef"
  },
  "data": {
    "type": "peoples",
    "id": "073b5936-0acb-4601-b4b7-9de607dfc2ef",
    "attributes": "<some data>",
    "relationships": {
      "articles": {
        "data": {
          "type": "articles",
          "id": "c49094ce-71ab-40d4-a642-ea200f72eac6"
        }
      }
    }
  },
  "included": [
    {
      "type": "articles",
      "id": "c49094ce-71ab-40d4-a642-ea200f72eac6",
      "attributes": "<some data>"
    }
  ]
}
