src/responses/tests/snapshots/ciboulette__responses__tests__select_success__with_include_single_empty.snap
---
source: src/responses/tests/select_success.rs
expression: response

---
{
  "jsonapi": {
    "version": "1.0"
  },
  "links": {
    "self": "/peoples/073b5936-0acb-4601-b4b7-9de607dfc2ef"
  },
  "data": {
    "type": "peoples",
    "id": "073b5936-0acb-4601-b4b7-9de607dfc2ef",
    "attributes": "<some data>",
    "links": {
      "self": "/peoples/073b5936-0acb-4601-b4b7-9de607dfc2ef"
    }
  }
}
