src/responses/tests/snapshots/ciboulette__responses__tests__select_success__with_included.snap
---
source: src/responses/tests/select_success.rs
expression: response

---
{
  "jsonapi": {
    "version": "1.0"
  },
  "links": {
    "self": "/peoples"
  },
  "data": [
    {
      "type": "peoples",
      "id": "073b5936-0acb-4601-b4b7-9de607dfc2ef",
      "attributes": "<some data>",
      "relationships": {
        "articles": {
          "links": {
            "self": "/peoples/073b5936-0acb-4601-b4b7-9de607dfc2ef/relationships/articles",
            "related": "/peoples/073b5936-0acb-4601-b4b7-9de607dfc2ef/articles"
          },
          "data": [
            {
              "type": "articles",
              "id": "c49094ce-71ab-40d4-a642-ea200f72eac6"
            },
            {
              "type": "articles",
              "id": "90e676f5-9598-44e7-9e5b-f0c7b1a188d1"
            }
          ]
        }
      },
      "links": {
        "self": "/peoples/073b5936-0acb-4601-b4b7-9de607dfc2ef"
      }
    }
  ],
  "included": [
    {
      "type": "articles",
      "id": "90e676f5-9598-44e7-9e5b-f0c7b1a188d1",
      "attributes": "<some data>",
      "links": {
        "self": "/articles/90e676f5-9598-44e7-9e5b-f0c7b1a188d1"
      }
    },
    {
      "type": "articles",
      "id": "c49094ce-71ab-40d4-a642-ea200f72eac6",
      "attributes": "<some data>",
      "links": {
        "self": "/articles/c49094ce-71ab-40d4-a642-ea200f72eac6"
      }
    }
  ]
}
