src/responses/tests/snapshots/ciboulette__responses__tests__select_success__with_multi_included.snap
---
source: src/responses/tests/select_success.rs
expression: response

---
{
  "jsonapi": {
    "version": "1.0"
  },
  "links": {
    "self": "/peoples"
  },
  "data": [
    {
      "type": "peoples",
      "id": "073b5936-0acb-4601-b4b7-9de607dfc2ef",
      "attributes": "<some data>",
      "relationships": {
        "articles": {
          "data": {
            "type": "articles",
            "id": "c49094ce-71ab-40d4-a642-ea200f72eac6"
          }
        }
      },
      "links": {
        "self": "/peoples/073b5936-0acb-4601-b4b7-9de607dfc2ef"
      }
    },
    {
      "type": "peoples",
      "id": "01b8fb1f-989b-4ec0-86a0-72786017682b",
      "attributes": "<some data>",
      "relationships": {
        "articles": {
          "data": {
            "type": "articles",
            "id": "90e676f5-9598-44e7-9e5b-f0c7b1a188d1"
          }
        }
      },
      "links": {
        "self": "/peoples/01b8fb1f-989b-4ec0-86a0-72786017682b"
      }
    }
  ],
  "included": [
    {
      "type": "articles",
      "id": "90e676f5-9598-44e7-9e5b-f0c7b1a188d1",
      "attributes": "<some data>",
      "links": {
        "self": "/articles/90e676f5-9598-44e7-9e5b-f0c7b1a188d1"
      }
    },
    {
      "type": "articles",
      "id": "c49094ce-71ab-40d4-a642-ea200f72eac6",
      "attributes": "<some data>",
      "links": {
        "self": "/articles/c49094ce-71ab-40d4-a642-ea200f72eac6"
      }
    }
  ]
}
