src/responses/tests/snapshots/ciboulette__responses__tests__select_success__with_multi_included_empty.snap
---
source: src/responses/tests/select_success.rs
expression: response

---
{
  "jsonapi": {
    "version": "1.0"
  },
  "links": {
    "self": "/peoples"
  },
  "data": [
    {
      "type": "peoples",
      "id": "073b5936-0acb-4601-b4b7-9de607dfc2ef",
      "attributes": "<some data>"
    },
    {
      "type": "peoples",
      "id": "01b8fb1f-989b-4ec0-86a0-72786017682b",
      "attributes": "<some data>"
    }
  ]
}
